--- a/src/styles/detail.css
+++ b/src/styles/detail.css
@@ -133,12 +133,12 @@ li {
 
 .description-wrapper .detail-outlet-category {
 	display: inline-block;
-	margin-bottom: 0.5rem;
+	margin-bottom: 0.25rem;
 	padding: 0.3rem 0.7rem;
 	font-size: 1em;
 	font-weight: 500;
 	color: var(--white-color);
-	border-radius: 3.125rem;
+	border-radius: 0.25rem;
 	background-color: var(--primary-color);
 }
 
@@ -219,7 +219,7 @@ li {
 .menu-wrapper {
 	padding: 0.5rem;
 	max-width: 100%;
-	border-radius: 0.5rem;
+	border-radius: 0.25rem;
 	margin-bottom: 1rem;
 	background-color: var(--white-color);
 	-webkit-box-shadow: 2px 10px 48px -15px rgba(209, 209, 209, 1);
@@ -317,13 +317,13 @@ li {
 .review-card .desc {
 	position: relative;
 	background-color: var(--dark-black);
-	border-radius: 1.5rem;
+	border-radius: 0.25rem;
 	word-wrap: break-word;
 }
 
 .desc .review-text {
 	padding: 0.9rem;
-	font-size: 0.875;
+	font-size: 0.875rem;
 	color: var(--white-color);
 	letter-spacing: 0.05em;
 	font-weight: 300;
@@ -370,7 +370,6 @@ li {
 }
 
 /* Form */
-
 .form-container {
 	display: flex;
 	flex-direction: column;
@@ -403,7 +402,7 @@ textarea {
 	margin-top: 0.5rem;
 	display: block;
 	padding: 0.75rem;
-	border: 2px solid rgba(255, 204, 71, 0.8);
+	border: 2px solid var(--primary-color);
 	border-radius: 0.25rem;
 	box-sizing: border-box;
 	font-size: 1.125em;
