feat: change color theme for better contrast ratio

--- a/src/styles/detail.css
+++ b/src/styles/detail.css
@@ -1,9 +1,9 @@
 :root {
-	--primary-color: #ff8303;
+	--primary-color: #ff4f03;
 	--dark-black: #1f1d36;
-	--gold-color: #ffcc47;
+	--gold-color: #ffb700;
 	--white-color: #ffffff;
-	--gray-color: #9d9d9d;
+	--gray-color: #737373;
 }
 
 li {
