--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -1,300 +1,300 @@
 :root {
-  --white-color: #ffffff;
-  --primary-color: #ff8303;
-  --dark-black: #1b1a17;
-  --gold-color: #ffcc47;
+	--white-color: #ffffff;
+	--primary-color: #ff4f03;
+	--dark-black: #1b1a17;
+	--gold-color: #ffcc47;
 }
 
 @media (max-width: 74.938rem) {
-  .container {
-    max-width: 100%;
-    margin: 0;
-  }
-  .outlet-container .outlet-card:first-child,
-  .outlet-container .outlet-card:nth-child(7),
-  .outlet-container .outlet-card:nth-child(13) {
-    grid-column: initial;
-  }
-  .outlet-container .outlet-card:nth-child(12),
-  .outlet-container .outlet-card:nth-child(18),
-  .outlet-container .outlet-card:nth-child(6) {
-    grid-column: initial;
-  }
-  .navbar-wrapper {
-    border: 0;
-  }
-  .logo {
-    padding-left: 1.2rem;
-  }
-  .nav-list {
-    padding-right: 1.2rem;
-  }
-  .hero {
-    margin-top: 0;
-    max-width: 100%;
-  }
-  .hero .hero-image {
-    max-width: 100%;
-  }
-  .search-container .search {
-    width: 40%;
-  }
-  .outlet {
-    margin-right: 2.25rem;
-    margin-left: 2.25rem;
-  }
-  .most-favorite {
-    margin-right: 2.25rem;
-    margin-left: 2.25rem;
-  }
-  .all-food {
-    margin-right: 2.25rem;
-    margin-left: 2.25rem;
-  }
-  .choose {
-    margin-right: 2.25rem;
-    margin-left: 2.25rem;
-  }
-  .footer-wrapper {
-    margin: 0 2.25rem;
-  }
-  .pagenotfound-container .page-notfound {
-    max-width: 80%;
-  }
+	.container {
+		max-width: 100%;
+		margin: 0;
+	}
+	.outlet-container .outlet-card:first-child,
+	.outlet-container .outlet-card:nth-child(7),
+	.outlet-container .outlet-card:nth-child(13) {
+		grid-column: initial;
+	}
+	.outlet-container .outlet-card:nth-child(12),
+	.outlet-container .outlet-card:nth-child(18),
+	.outlet-container .outlet-card:nth-child(6) {
+		grid-column: initial;
+	}
+	.navbar-wrapper {
+		border: 0;
+	}
+	.logo {
+		padding-left: 1.2rem;
+	}
+	.nav-list {
+		padding-right: 1.2rem;
+	}
+	.hero {
+		margin-top: 0;
+		max-width: 100%;
+	}
+	.hero .hero-image {
+		max-width: 100%;
+	}
+	.search-container .search {
+		width: 40%;
+	}
+	.outlet {
+		margin-right: 2.25rem;
+		margin-left: 2.25rem;
+	}
+	.most-favorite {
+		margin-right: 2.25rem;
+		margin-left: 2.25rem;
+	}
+	.all-food {
+		margin-right: 2.25rem;
+		margin-left: 2.25rem;
+	}
+	.choose {
+		margin-right: 2.25rem;
+		margin-left: 2.25rem;
+	}
+	.footer-wrapper {
+		margin: 0 2.25rem;
+	}
+	.pagenotfound-container .page-notfound {
+		max-width: 80%;
+	}
 }
 
 @media (max-width: 62.375rem) {
-  /* .food-description {
+	/* .food-description {
     padding: 2rem 0.625rem;
   } */
-  .hero {
-    border-radius: 0;
-  }
-  .hero .hero-image {
-    border-radius: 0;
-  }
+	.hero {
+		border-radius: 0;
+	}
+	.hero .hero-image {
+		border-radius: 0;
+	}
 }
 
 @media (max-width: 62.063rem) {
-  .search-container .search {
-    width: 50%;
-  }
-  .social-items {
-    padding: 0.375rem;
-    font-size: 0.875rem;
-  }
-  .choose-container {
-    flex-direction: column;
-  }
-  .choose-title {
-    margin-top: 1.875rem;
-    font-size: 1.3em;
-  }
-  .choose-description {
-    max-width: 100%;
-  }
-  .list-choose-item {
-    font-size: 1.188rem;
-  }
-  .footer-wrapper {
-    flex-direction: column;
-  }
-  .bites-description {
-    font-size: 1.3em;
-    margin-bottom: 1.25rem;
-  }
-  .footer-content {
-    margin-bottom: 1.875rem;
-  }
+	.search-container .search {
+		width: 50%;
+	}
+	.social-items {
+		padding: 0.375rem;
+		font-size: 0.875rem;
+	}
+	.choose-container {
+		flex-direction: column;
+	}
+	.choose-title {
+		margin-top: 1.875rem;
+		font-size: 1.3em;
+	}
+	.choose-description {
+		max-width: 100%;
+	}
+	.list-choose-item {
+		font-size: 1.188rem;
+	}
+	.footer-wrapper {
+		flex-direction: column;
+	}
+	.bites-description {
+		font-size: 1.3em;
+		margin-bottom: 1.25rem;
+	}
+	.footer-content {
+		margin-bottom: 1.875rem;
+	}
 }
 
 @media (max-width: 55.125rem) {
-  .hero .hero-title {
-    font-size: 3.6rem;
-  }
+	.hero .hero-title {
+		font-size: 3.6rem;
+	}
 }
 
 @media (max-width: 52.5rem) {
-  .hero .hero-description {
-    bottom: 10%;
-  }
-  .bites-excess {
-    margin: 6.25rem auto;
-  }
-  .badge {
-    font-size: 0.875rem;
-    padding: 0.5rem 0.75rem;
-  }
-  .choose-title {
-    font-size: 1.25em;
-  }
-  .list-choose-item {
-    font-size: 1em;
-  }
-  .footer-title {
-    font-size: 0.875em;
-  }
-  .footer-description {
-    font-size: 0.5em;
-  }
+	.hero .hero-description {
+		bottom: 10%;
+	}
+	.bites-excess {
+		margin: 6.25rem auto;
+	}
+	.badge {
+		font-size: 0.875rem;
+		padding: 0.5rem 0.75rem;
+	}
+	.choose-title {
+		font-size: 1.25em;
+	}
+	.list-choose-item {
+		font-size: 1em;
+	}
+	.footer-title {
+		font-size: 0.875em;
+	}
+	.footer-description {
+		font-size: 0.5em;
+	}
 }
 
 @media (max-width: 50rem) {
-  .navbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 99;
-  }
-  .navbar.nav-colored {
-    transition: all 0.5s;
-    background-color: var(--white-color);
-    box-shadow: 1px 19px 20px -15px rgba(176, 176, 176, 0.75);
-    -webkit-box-shadow: 1px 19px 20px -15px rgba(176, 176, 176, 0.75);
-    -moz-box-shadow: 1px 19px 20px -15px rgba(176, 176, 176, 0.75);
-  }
-  .navbar.nav-transparent {
-    background-color: transparent;
-    transition: all 0.5s;
-  }
-  .logo {
-    position: fixed;
-    left: 1.25rem;
-    z-index: 1;
-  }
-  .hamburger-menu {
-    position: fixed;
-    right: 1.25rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    z-index: 2;
-  }
-  .navbar .nav-list {
-    position: fixed;
-    right: 0;
-    left: 0;
-    top: 0;
-    max-width: 100%;
-    min-height: 100%;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    background-color: var(--dark-black);
-    transform: translateY(-120%);
-    transition: all 0.6s;
-    opacity: 0;
-    z-index: 1;
-  }
-  .hero {
-    max-width: 100%;
-  }
-  .hero .hero-title {
-    font-size: 3.2rem;
-    top: 25%;
-  }
-  .account-wrapper {
-    display: flex;
-    z-index: 2;
-  }
-  .navbar .nav-list.slide {
-    opacity: 1;
-    transform: translateX(0);
-  }
-  .list-items {
-    font-size: 1.3em;
-    color: white;
-  }
-  .section-title {
-    font-size: 1.6em;
-  }
-  .choose-title {
-    margin-top: 1.875rem;
-    font-size: 1em;
-  }
-  .link-container {
-    margin-top: 2rem;
-  }
-  .outlet-image-wrapper {
-    max-width: 100%;
-  }
-  .outlet-description {
-    width: 100%;
-  }
+	.navbar {
+		position: fixed;
+		top: 0;
+		width: 100%;
+		z-index: 99;
+	}
+	.navbar.nav-colored {
+		transition: all 0.5s;
+		background-color: var(--white-color);
+		box-shadow: 1px 19px 20px -15px rgba(176, 176, 176, 0.75);
+		-webkit-box-shadow: 1px 19px 20px -15px rgba(176, 176, 176, 0.75);
+		-moz-box-shadow: 1px 19px 20px -15px rgba(176, 176, 176, 0.75);
+	}
+	.navbar.nav-transparent {
+		background-color: transparent;
+		transition: all 0.5s;
+	}
+	.logo {
+		position: fixed;
+		left: 1.25rem;
+		z-index: 1;
+	}
+	.hamburger-menu {
+		position: fixed;
+		right: 1.25rem;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
+		z-index: 2;
+	}
+	.navbar .nav-list {
+		position: fixed;
+		right: 0;
+		left: 0;
+		top: 0;
+		max-width: 100%;
+		min-height: 100%;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+		background-color: var(--dark-black);
+		transform: translateY(-120%);
+		transition: all 0.6s;
+		opacity: 0;
+		z-index: 1;
+	}
+	.hero {
+		max-width: 100%;
+	}
+	.hero .hero-title {
+		font-size: 3.2rem;
+		top: 25%;
+	}
+	.account-wrapper {
+		display: flex;
+		z-index: 2;
+	}
+	.navbar .nav-list.slide {
+		opacity: 1;
+		transform: translateX(0);
+	}
+	.list-items {
+		font-size: 1.3em;
+		color: white;
+	}
+	.section-title {
+		font-size: 1.6em;
+	}
+	.choose-title {
+		margin-top: 1.875rem;
+		font-size: 1em;
+	}
+	.link-container {
+		margin-top: 2rem;
+	}
+	.outlet-image-wrapper {
+		max-width: 100%;
+	}
+	.outlet-description {
+		width: 100%;
+	}
 }
 
 @media (max-width: 46.688rem) {
-  .hero .hero-title {
-    font-size: 2.5rem;
-  }
-  .hero .hero-description {
-    font-size: 1rem;
-  }
+	.hero .hero-title {
+		font-size: 2.5rem;
+	}
+	.hero .hero-description {
+		font-size: 1rem;
+	}
 }
 
 @media (max-width: 39.938rem) {
-  .hero .hero-title {
-    font-size: 2.1rem;
-  }
-  .hero .hero-description {
-    font-size: 1rem;
-  }
+	.hero .hero-title {
+		font-size: 2.1rem;
+	}
+	.hero .hero-description {
+		font-size: 1rem;
+	}
 }
 
 @media (max-width: 33.563rem) {
-  .hero .hero-title {
-    font-size: 1.8rem;
-  }
-  .hero .hero-description {
-    font-size: 0.875rem;
-  }
+	.hero .hero-title {
+		font-size: 1.8rem;
+	}
+	.hero .hero-description {
+		font-size: 0.875rem;
+	}
 }
 
 @media (max-width: 34.25rem) {
-  .main-container {
-    margin: 0;
-  }
-  .hero .hero-image {
-    max-height: 37.5rem;
-  }
-  .hero .hero-title {
-    top: 30%;
-  }
-  .hero .hero-description {
-    bottom: 13%;
-  }
-  .hero .hero-image {
-    max-height: 100%;
-  }
-  .search-container {
-    margin-top: 1.875rem;
-  }
-  .search-container .search {
-    width: 100%;
-  }
-  .outlet-container {
-    width: 100%;
-  }
-  .outlet-image {
-    height: 14.375rem;
-  }
-  .footer-container {
-    margin: 0 1rem;
-  }
+	.main-container {
+		margin: 0;
+	}
+	.hero .hero-image {
+		max-height: 37.5rem;
+	}
+	.hero .hero-title {
+		top: 30%;
+	}
+	.hero .hero-description {
+		bottom: 13%;
+	}
+	.hero .hero-image {
+		max-height: 100%;
+	}
+	.search-container {
+		margin-top: 1.875rem;
+	}
+	.search-container .search {
+		width: 100%;
+	}
+	.outlet-container {
+		width: 100%;
+	}
+	.outlet-image {
+		height: 14.375rem;
+	}
+	.footer-container {
+		margin: 0 1rem;
+	}
 }
 
 @media (max-width: 27.375rem) {
-  .hero .hero-title {
-    font-size: 1.6rem;
-  }
-  .hero .hero-description {
-    font-size: 0.75rem;
-  }
+	.hero .hero-title {
+		font-size: 1.6rem;
+	}
+	.hero .hero-description {
+		font-size: 0.75rem;
+	}
 }
 
 @media (max-width: 25.313rem) {
-  .hero .hero-title {
-    font-size: 1.4rem;
-    top: 30%;
-  }
+	.hero .hero-title {
+		font-size: 1.4rem;
+		top: 30%;
+	}
 }
